--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,8 @@ dependencies {
 
     //circleimage
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
