--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,24 +26,34 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
     // For Firebase
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-storage:19.0.0'
     implementation 'com.google.firebase:firebase-database:19.0.0'
     // Support desgin
     implementation 'com.android.support:design:28.0.0'
-
     // Dexter
     implementation 'com.karumi:dexter:4.2.0'
-
     //circleimage
     implementation 'de.hdodenhof:circleimageview:3.0.1'
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    // Play Services
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    //Maps
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    //Retrofit2
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //Rxjava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 apply plugin: 'com.google.gms.google-services'
